# statusbar

./: Cargo.toml  README.md
.github/workflows/: binaries.yml  main.yml
src/: main.rs
