[package]
name = "statusbar"
version = "0.3.0"
edition = "2021"
description = "dwm statusbar"
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/wcampbell0x2a/statusbar"
repository = "https://github.com/wcampbell0x2a/statusbar"

[dependencies]
chrono = "0.4.22"
clap = { version = "4.0.4", features = ["derive"] }
local-ip-address = "0.4.7"
sysinfo = "0.25.1"

[profile.release]
strip = true
lto = true
