[package]
name = "statusbar"
version = "0.3.5"
edition = "2021"
description = "dwm statusbar"
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/wcampbell0x2a/statusbar"
repository = "https://github.com/wcampbell0x2a/statusbar"
keywords = ["statusbar", "dwm", "linux"]

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.18", features = ["derive"] }
local-ip-address = "0.5.6"
sysinfo = "0.30.9"

[profile.release]
strip = true
lto = true
