[package]
name = "statusbar"
version = "0.4.0"
edition = "2024"
description = "dwm statusbar"
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/wcampbell0x2a/statusbar"
repository = "https://github.com/wcampbell0x2a/statusbar"
keywords = ["statusbar", "dwm", "linux"]

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.18", features = ["derive"] }
local-ip-address = "0.6.5"
sysinfo = "0.37.0"

[profile.release]
strip = true
lto = true
